[project]
name = "ai-squared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym==0.25.2",
    "gymnasium==1.0.0",
    "pygame>=2.6.1",
    "pymunk>=7.1.0",
    "sb3-contrib>=2.6.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
